# spiral-rs

./: .gitignore  Cargo.toml
apt_parser/: Cargo.toml
apt_parser/src/: lib.rs
apt_parser/src/contents/: mod.rs
apt_parser/tests/: Contents-amd64-dummy
spiral/: Cargo.toml
spiral-local/: Cargo.toml
spiral-local/src/: main.rs
spiral/src/: lib.rs  translate.rs
spiral/src/metadata/: contents.rs  mod.rs
spiral/src/package/: mod.rs
spiral/templates/: control.stpl  doc.stpl
spiral/tests/: Contents-amd64-dummy
