[package]
name = "spiral"
version = "0.1.0"
edition = "2021"
authors = ["Kay Lin <i@v2bv.net>"]
description = "Library for generating empty Debian packages"
homepage = "https://github.com/Spiral-repo/spiral"
repository = "https://github.com/Spiral-repo/spiral"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = [ "std-systemtime" ]
std-systemtime = []

[dependencies]
ar = "^0.9"
log = "^0.4"
tar = "^0.4"
sha2 = "^0.10"
toml = "^0.5"
serde = { version = "^1.0", features = [ "derive" ]}
strum = { version = "0.24", features = [ "derive" ] }
anyhow = "^1.0"
cfg-if = "^1.0"
flate2 = "^1.0"
sailfish = "^0.5"
apt_parser = { path = "../apt_parser" }
lazy_static = "^1.4"

# [dev-dependencies]
# hex = "^0.4"
# tokio = { version = "^1.0", features = [ "io-util", "rt", "fs", "rt-multi-thread" ] }
# serde_json = "^1.0"
# async-compat = "^0.2"
